# otus_c3p

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
allocator/: CMakeLists.txt
allocator/include/allocator/: allocator.hpp
allocator/include/container/: container.hpp
allocator/src/: allocator.cpp
async/: CMakeLists.txt  main.cpp
async/include/async/: async.h
async/src/: Impl.cpp  async.cpp
bayan/: CMakeLists.txt  main.cpp
bayan/include/bayan/: ICommandLineParser.hpp  IFilesProcessor.hpp
bayan/src/: CommandLineParser.cpp  FilesProcessor.cpp  FilesProcessor.hpp
cmd/: CMakeLists.txt  main.cpp
cmd/include/cmd/: ICommand.hpp  ICommandFactory.hpp  ICommandStorage.hpp
cmd/src/: Add.cpp  Add.hpp  BlockClosing.cpp  BlockClosing.hpp  BlockOpening.cpp  BlockOpening.hpp  CommandFactory.cpp  CommandFactory.hpp  CommandStorage.cpp  CommandStorage.hpp
editor/: CMakeLists.txt
editor/document/: CMakeLists.txt
editor/document/include/: IDocument.hpp  IDocumentFactory.hpp
editor/drawing/: CMakeLists.txt
editor/drawing/include/: Item.hpp
editor/drawing/include/fillings/: ContourFilling.hpp  IFilling.hpp
editor/drawing/include/items/: Circle.hpp  Line.hpp  Rectangle.hpp
editor/plot/: CMakeLists.txt
editor/plot/include/: IPlot.hpp
ip_filter/: CMakeLists.txt
ip_filter/include/ip_filter/: IPFilter.hpp
ip_filter/src/: IPFilterImpl.cpp  IPFilterImpl.hpp
ip_filter/test/: CMakeLists.txt  tests.cpp
ip_template/: CMakeLists.txt  ip_int.hpp
ip_template/include/ip_template/: IPTemplate.hpp
lock_free/: CMakeLists.txt  main.cpp
lock_free/include/lock_free/: Motivation.hpp  SpinLockMtx.hpp  Stack.hpp
matrix/: CMakeLists.txt
matrix/include/: matrix.hpp
matrix/include/matrix/: Matrix.hpp
project/: CMakeLists.txt  main.cpp
project/version_provider/: CMakeLists.txt
project/version_provider/include/version_provider/: VersionProvider.hpp
project/version_provider/src/: VersionProviderImpl.cpp  VersionProviderImpl.hpp
project/version_provider/test/: CMakeLists.txt
version_provider/: CMakeLists.txt
version_provider/include/version_provider/: VersionProvider.hpp
version_provider/src/: version.hpp.in
version_provider/test/: CMakeLists.txt  tests.cpp
